--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -10,6 +10,7 @@
   .TextContent{
     width: 50%;
     text-align: left;
+    margin-right: 3%;
   }
 
   p{
@@ -19,39 +20,66 @@
 .TextTitle{
     color: #09549F;
     font-weight: bold;
-    font-size: 48px;
+    font-size: 46px;
     text-align: left;
 }
-input{
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  padding: 5px 10px;
-  width:400px ;
-  margin: 20px auto;
-  color: #2C3E50;
-  border: none;
-  padding: 10px 15px;
-  outline: none;
+.search-bar {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 400px;
+  margin-top: 20px;
+  background-color:#fff  !important;
 }
-.searchBtn{
-  background-color: #09549F;
-  color: #fff;
-  border-radius: 5px;
-  font-weight: bold;
+
+.search-input {
   width: auto;
-  border: none;
-  padding: 10px 15px;
-  outline: none;
-  flex: 1;
-  font-size: 16px;
+  padding: 10px 20px;
+  border: 1px solid #ccc;
   border-radius: 30px;
-    
+  outline: none;
+  font-size: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding-right: 100px; /* Espaço para o botão */
+  background-color:#fff  !important;
 
 }
+
+.search-input::placeholder {
+  color: #aaa;
+}
+
+.search-button {
+  position: absolute;
+  right: 10px;
+  background-color: #4a90e2;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.search-button:hover {
+  background-color: #357ab7;
+}
+
+.subitens{
+  display: flex;
+  flex-direction: row;
+  gap: 3%;
+  margin-top: 5%;
+  text-align: center;
+}
+
+.subitens h4{
+  color: #09549F;
+  font-weight: bold;
+}
   .ImageContent{
-    width: 50%;
     opacity: 0;
     transform: translateX(100%);
     transition: opacity 1s ease-out, transform 1s ease-out;
@@ -70,6 +98,115 @@ input{
 
   .ImageContent img{
     height: 700px;
+  }
+
+  @media (max-width: 768px) {
+
+    .container-content {
+      display: flex;
+      flex-direction: column !important;
+      color: #2C3E50;
+      margin-top: 5%;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+  
+    }
+    .TextContent{
+      width: 100%;
+      text-align: center;
+      margin-bottom: 3%;
+    }
+  
+    p{
+      font-size: 18px;
+      font-weight: 500;
+    }
+  .TextTitle{
+      color: #09549F;
+      font-weight: bold;
+      font-size: 36px;
+      text-align: center;
+  }
+  .search-bar {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 400px;
+    margin-top: 20px;
+    background-color:#fff  !important;
+  }
+  
+  .search-input {
+    width: auto;
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 30px;
+    outline: none;
+    font-size: 16px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding-right: 100px; /* Espaço para o botão */
+    background-color:#fff  !important;
+  
+  }
+  
+  .search-input::placeholder {
+    color: #aaa;
+  }
+  
+  .search-button {
+    position: absolute;
+    right: 10px;
+    background-color: #4a90e2;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .search-button:hover {
+    background-color: #357ab7;
+  }
+  
+  .subitens{
+    display: flex;
+    flex-direction: row;
+    gap: 3%;
+    margin-top: 5%;
+    text-align: center;
+  }
+  
+  .subitens h4{
+    color: #09549F;
+    font-weight: bold;
+  }
+    .ImageContent{
+      opacity: 0;
+      transform: translateX(100%);
+      transition: opacity 1s ease-out, transform 1s ease-out;
+      overflow-x: hidden;
+    }
+  
+    .ImageContent.fade-in {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  
+    .Banner{
+      height: 580px !important;
+      width: auto;
+    }
+  
+    .ImageContent img{
+      display: none;
+    }
+
+
+
   }
 
 
