--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding: 0rem 2rem;
   text-align: center;
-  font-family: montserrat;
+  font-family: poppins;
 }
 
 /* .logo {
