--- a/src/assets/Navbar.css
+++ b/src/assets/Navbar.css
@@ -36,7 +36,7 @@
   }
   
   .login-button {
-    background-color: #fff; /* Cor azul para o botão de login */
+    background-color: #fff; 
     color: #0d6efd;
     padding: 8px 16px;
     border-radius: 5px;
