--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -101,7 +101,7 @@
     justify-content: start;
     align-items: center;
     gap: 35%;
-    background-color: #f2f2f6;
+    background-color: #EDF1FA;
     border-radius: 22px;
   }
 
