--- a/src/assets/stats.css
+++ b/src/assets/stats.css
@@ -55,7 +55,7 @@
 }
 
 .BotCards{
-    padding: 5%;
+    padding: 2%;
     width: 30%;
     font-weight: bold;
     border-radius: 14px;
@@ -67,6 +67,9 @@
     box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
               0 4px 4px rgba(0,0,0,0.12), 
               0 16px 16px rgba(0,0,0,0.12);
+
+    text-align: left;
+
     
 }
 
@@ -74,11 +77,110 @@
     color: #3A8ADB;
     font-weight: bold;
 
+
 }
 
 
 .start{
     color: #fff;
     background-color: #3A8ADB;
+    text-align: left;
+
+}
+
+
+@media (max-width: 768px) {
+
+
+    .StatsContainer{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin:0 auto;
+        padding: 3%;
+    }
+    
+    .FirstContent{
+        width: 100%;
+        text-align: left;
+        margin-top: 5%;
+    }
+    
+    .SecondContent{
+        width: 100%;
+    }
+    .SecondContent img{
+        height: 400px;
+    }
+    
+    .StatsCard{
+        color: #2C3E50;
+        margin-bottom: 5%;
+        border-radius: 7px;
+        padding: 3%;
+    
+        border-radius: 20px;
+        transition: all 0.3s;
+        -webkit-transition: width 1s;
+        transition: width 1s;
+        box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
+                  0 4px 4px rgba(0,0,0,0.12), 
+                  0 16px 16px rgba(0,0,0,0.12);
+    
+        -webkit-transition: all .5s;
+        -moz-transition: all .5s;
+        transition: all .5s;
+    
+    }
+    
+    .StatsTitle{
+        color: #3A8ADB;
+        font-weight: bold;}
+    
+    .CardsBottom{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        margin-bottom: 5%;
+        gap: 10px;
+    
+    }
+    
+    .BotCards{
+        margin-top: 5%;
+        padding: 3%;
+        width: 100%;
+        font-weight: bold;
+        border-radius: 14px;
+        color: #2C3E50;
+        border-radius: 20px;
+        transition: all 0.3s;
+        -webkit-transition: width 1s;
+        transition: width 1s;
+        box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
+                  0 4px 4px rgba(0,0,0,0.12), 
+                  0 16px 16px rgba(0,0,0,0.12);
+    
+        text-align: left;
+    
+        
+    }
+    
+    .BotCards h2{
+        color: #3A8ADB;
+        font-weight: bold;
+    
+    
+    }
+    
+    
+    .start{
+        color: #fff;
+        background-color: #3A8ADB;
+        text-align: left;
+    
+    }
 }
 
