--- a/src/assets/comercial.css
+++ b/src/assets/comercial.css
@@ -32,7 +32,7 @@
 
 .TalkButton{
   right: 10px;
-  background-color: #4a90e2;
+  background-color: #09549F;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -105,7 +105,7 @@ width: 100%;
     
     .TalkButton{
       right: 10px;
-      background-color: #4a90e2;
+      background-color: #09549F;
       color: white;
       border: none;
       padding: 10px 20px;
