--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -55,7 +55,7 @@
 .search-button {
   position: absolute;
   right: 10px;
-  background-color: #4a90e2;
+  background-color: #09549F;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -179,7 +179,7 @@
   .search-button {
     position: absolute;
     right: 10px;
-    background-color: #4a90e2;
+    background-color: #09549F;
     color: white;
     border: none;
     padding: 10px 20px;
