--- a/src/assets/stats.css
+++ b/src/assets/stats.css
@@ -5,7 +5,10 @@
     align-items: center;
     margin:0 auto;
     padding: 3%;
+
 }
+
+
 
 .FirstContent{
     width: 50%;
@@ -41,7 +44,7 @@
 }
 
 .StatsTitle{
-    color: #3A8ADB;
+    color: #09549F;
     font-weight: bold;}
 
 .CardsBottom{
@@ -74,7 +77,7 @@
 }
 
 .BotCards h2{
-    color: #3A8ADB;
+    color: #09549F;
     font-weight: bold;
 
 
@@ -83,10 +86,44 @@
 
 .start{
     color: #fff;
-    background-color: #3A8ADB;
+    background-color: #09549F;
     text-align: left;
 
 }
+
+.StatsBanner{
+    background-image: url(images/bkgBanner.jpg);
+    height: 500px;
+    border-radius: 14px;
+    color: #fff;
+    padding: 5%;
+    margin-bottom: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.BtnBanner{
+    background-color: #fff;
+    color: #2C3E50;
+    padding: 20px;
+    font-weight: bold;
+    border-radius: 14px;
+    border: none transparent;
+    transition: background-color 0.3s ease;
+
+}
+
+.BtnBanner:hover{
+    background-color:#09549F ;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border-radius: 20px;
+}
+
 
 
 @media (max-width: 768px) {
@@ -135,7 +172,7 @@
     }
     
     .StatsTitle{
-        color: #3A8ADB;
+        color: #09549F;
         font-weight: bold;}
     
     .CardsBottom{
@@ -169,7 +206,7 @@
     }
     
     .BotCards h2{
-        color: #3A8ADB;
+        color: #09549F;
         font-weight: bold;
     
     
@@ -178,9 +215,31 @@
     
     .start{
         color: #fff;
-        background-color: #3A8ADB;
+        background-color: #09549F;
         text-align: left;
     
     }
+
+    .StatsBanner{
+        background-image: url(images/bkgBanner.jpg);
+        height: 500px;
+        border-radius: 14px;
+        color: #fff;
+        padding: 5%;
+        margin-bottom: 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .BtnBanner{
+    background-color: #fff;
+    color: #2C3E50;
+    padding: 20px;
+    font-weight: bold;
+    border-radius: 14px;
+    border: none transparent;
+}
 }
 
