--- a/src/assets/stats.css
+++ b/src/assets/stats.css
@@ -48,6 +48,20 @@
     font-weight: bold;
 }
 
+.IconContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+}
+.IconStats{
+    width: 10%;
+}
+.TextStats{
+    width: 90%;
+}
+
 ion-icon {
     color: #09549F;
     align-items: center;
@@ -58,9 +72,7 @@ ion-icon {
 .StatsCardTitle{
 margin-left: 3%;
 }
-.StatsCardText{
-    margin-left: 5.5%;
-}
+
 .CardsBottom{
     display: flex;
     flex-direction: row;
