--- a/src/assets/Footer.css
+++ b/src/assets/Footer.css
@@ -5,7 +5,53 @@
     display: flex;
     flex-direction: row;
     color: #fff;
-    padding: 0.25rem 0 !important; /* Ajuste o padding conforme necessário */  
-    border-radius: 22px 22px 0px 0px;
+    justify-content: space-evenly;
+    padding: 2%;
+}
+.logo{
+    height: 70px;
+    float: left;
+    margin-bottom: 5%;
+}
+.FooterText{
+    width: 400px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
 
+}
+.FooterIcons{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+@media (max-width: 768px) {
+    .FooterContainer {
+        background-color: #09549F;
+        display: flex;
+        flex-direction: column;
+        color: #fff;
+        justify-content: center !important;
+        padding: 3%;
+    }
+    .logo{
+        height: 90px;
+        margin-bottom: 5%;
+        float: none;
+    }
+    .FooterText{
+        width: 400px;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+    
+    }
+    .FooterIcons{
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        justify-content: center;
+        margin-bottom: 5%;
+    }
 }
