--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -31,48 +31,19 @@
     font-size: 46px;
     text-align: left;
 }
-.search-bar {
-  position: relative;
-  display: flex;
-  align-items: center;
-  width: 100%;
-  max-width: 400px;
-  margin-top: 20px;
-  background-color:#fff  !important;
-}
-
-.search-input {
-  width: auto;
-  padding: 10px 20px;
-  border: 1px solid #ccc;
-  border-radius: 30px;
-  outline: none;
-  font-size: 16px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding-right: 100px; /* Espaço para o botão */
-  background-color:#fff  !important;
-
-}
-
-.search-input::placeholder {
-  color: #aaa;
-}
-
-.search-button {
-  position: absolute;
-  right: 10px;
+.BtnContact{
+  color: #fff;
   background-color: #09549F;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 20px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+  padding: 3%;
+  border-radius: 14px;
+  width: 400px;
+  border: #09549F;
 }
 
-.search-button:hover {
-  background-color: #357ab7;
+.BtnContact:hover{
+  color: #09549F;
+  background-color: #fff;
+  border: #09549F solid 1px;
 }
 
 .subitens{
@@ -86,6 +57,7 @@
 .subitens h4{
   color: #09549F;
   font-weight: bold;
+  font-size: 2em;
 }
  
 
@@ -210,6 +182,8 @@
   .subitens h4{
     color: #09549F;
     font-weight: bold;
+    font-size: 1em !important;
+
   }
     .ImageContent{
       opacity: 0;
